--- a/home.html
+++ b/home.html
@@ -16,6 +16,7 @@
       <div class="dropdown">
         <a>More</a>
         <div class="dropdown-content">
+          <a href="">Care/Health Tips</a>
           <a href="blog.html">Blog</a>
           <a href="catsVsDogs.html">Cats vs Dogs</a>
           <a href="">About</a>
@@ -24,7 +25,7 @@
     </nav>
 
     <div id="welcome">
-      <p>Welcome, this is going to be a website for cats.</p>
+      <p class="marginTopSmall">Welcome, this is going to be a website about cats.</p>
       <img src="Images/cat1.jpg" alt="A picture of a cat." class="imgSize">
       </div>
   </body>
