--- a/catsVsDogs.html
+++ b/catsVsDogs.html
@@ -16,6 +16,7 @@
       <div class="dropdown">
         <a>More</a>
         <div class="dropdown-content">
+          <a href="">Care/Health Tips</a>
           <a href="blog.html">Blog</a>
           <a href="catsVsDogs.html">Cats vs Dogs</a>
           <a href="">About</a>
