updated missing webpages and mobile view

--- a/blog.html
+++ b/blog.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Blog - WhiskerWeb</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="Styling/basicStyling.css">
     <link rel="stylesheet" type="text/css" href="Styling/blog.css">
   </head>
@@ -16,10 +17,10 @@
       <div class="dropdown">
         <a>More</a>
         <div class="dropdown-content">
-          <a href="">Care/Health Tips</a>
+          <a href="care.html">Care/Health Tips</a>
           <a href="blog.html">Blog</a>
           <a href="catsVsDogs.html">Cats vs Dogs</a>
-          <a href="">About</a>
+          <a href="about.html">About</a>
         </div>
       </div>
     </nav>
