--- a/care.html
+++ b/care.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Game - WhiskerWeb</title>
+    <title>Care/Health Tips - WhiskerWeb</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="Styling/basicStyling.css">
-    <link rel="stylesheet" type="text/css" href="Styling/game.css">
+    <link rel="stylesheet" type="text/css" href="Styling/home.css">
   </head>
   <body>
     <h1 id="title">WhiskerWeb</h1>
-    
+
     <nav class="navigationBar">
       <a href="home.html">Home</a>
       <a href="facts.html">Facts</a>
@@ -25,15 +25,8 @@
       </div>
     </nav>
 
-    <div id="game">
-      <div id="message" style="display: none;"></div>
-      <img id="catImage" class="imgSize" src="" alt="A cat">
-      <div id="options"></div>
-      <button id="next">Next</button>
-    </div>
-
-    <div class="backButton" style="margin-top: 50px;">
-      <a href="home.html">Back to Home</a>
-    </div>
-    <script src="Scripts/game.js"></script>
+    <div id="welcome">
+      <p class="marginTopSmall">This page is currently not done.</p>
+      </div>
+  </body>
 </html>
