Created register and login feature

--- a/care.html
+++ b/care.html
@@ -4,7 +4,6 @@
     <title>Care/Health Tips - WhiskerWeb</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="Styling/basicStyling.css">
-    <link rel="stylesheet" type="text/css" href="Styling/home.css">
   </head>
   <body>
     <h1 id="title">WhiskerWeb</h1>
@@ -26,7 +25,32 @@
     </nav>
 
     <div id="welcome">
-      <p class="marginTopSmall">This page is currently not done.</p>
+      <p class="marginTopSmall">Care/Health Tips</p>
+    </div>
+
+    <h2 class="noMarginBottom">Health Tips</h2>
+    <div class="row">
+      <div class="column">
+        <h3>1. Regular Vet Visits</h3>
+        <p>Just like humans, cats need to see the vet regularly. It is recommended that cats see the vet at least once a year for a check-up. This is important because the vet can catch any health issues early on.</p>
+        <h3>2. Proper Nutrition</h3>
+        <p>It is important to feed your cat a balanced diet. Cats are obligate carnivores, which means they need meat to survive. Make sure to feed your cat high-quality cat food that is appropriate for their age and health status.</p>
+        <h3>3. Hydration</h3>
+        <p>Make sure your cat has access to fresh water at all times. Cats can be prone to urinary tract issues, so it is important to keep them hydrated.</p>
       </div>
+      <div class="column">
+        <h3>4. Regular Exercise</h3>
+        <p>Exercise is important for your cat's physical and mental health. Make sure your cat has plenty of toys to play with and engage in interactive play with your cat to keep them active.</p>
+        <h3>5. Grooming</h3>
+        <p>Regular grooming is important for your cat's health. Brush your cat regularly to prevent matting and hairballs. You should also trim your cat's nails and clean their ears as needed.</p>
+        <h3>6. Spaying/Neutering</h3>
+        <p>Spaying or neutering your cat is important for their health and well-being. It can prevent certain health issues and reduce the risk of certain cancers.</p>
+      </div>
+    </div>
+  
+    <div class="backButton" style="margin-top: 50px;">
+      <a href="home.html">Back to Home</a>
+    </div>
+
   </body>
 </html>
