--- a/home.html
+++ b/home.html
@@ -4,10 +4,10 @@
     <title>Home - WhiskerWeb</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="Styling/basicStyling.css">
-    <link rel="stylesheet" type="text/css" href="Styling/home.css">
   </head>
   <body>
     <h1 id="title">WhiskerWeb</h1>
+    <a href="account.html" class="accountButton">Account</a>
 
     <nav class="navigationBar">
       <a href="home.html">Home</a>
@@ -26,8 +26,8 @@
     </nav>
 
     <div id="welcome">
-      <p class="marginTopSmall">Welcome, this is going to be a website about cats.</p>
+      <p class="marginTopSmall">Home</p>
       <img src="Images/cat1.jpg" alt="A picture of a cat." class="imgSize">
-      </div>
+    </div>
   </body>
 </html>
