--- a/about.html
+++ b/about.html
@@ -4,7 +4,6 @@
     <title>About - WhiskerWeb</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="Styling/basicStyling.css">
-    <link rel="stylesheet" type="text/css" href="Styling/home.css">
   </head>
   <body>
     <h1 id="title">WhiskerWeb</h1>
@@ -26,7 +25,22 @@
     </nav>
 
     <div id="welcome">
-      <p class="marginTopSmall">This page is currently not done.</p>
+      <p class="marginTopSmall">About</p>
+    </div>
+    <div style="text-align: center; font-size: larger;">
+      <div>
+        <i>Hi there, my name is Elvin Nguyen and welcome to my website, WhiskerWeb, where you can find all things cats.</i>
       </div>
+      <div>
+        <i>My brother has two cats at home so that is the inspiration of this website. I hope you like it :).</i>
+      </div>
+      <div>
+        INSERT PICTURE OF CATS
+      </div>
+    </div>
+    <div class="backButton" style="margin-top: 50px;">
+      <a href="home.html">Back to Home</a>
+    </div>
+
   </body>
 </html>
