--- a/account.html
+++ b/account.html
@@ -13,7 +13,15 @@
       <a href="home.html">Home</a>
       <a href="facts.html">Facts</a>
       <img id="logo" src="Images/logo.png" alt="logo">
-      <a href="game.html">Game</a>
+      <div class="dropdown">
+        <a>Games</a>
+        <div class="dropdown-content">
+          <a href="game.html">Guess the Breed</a>
+          <a href="maze.html">Maze</a>
+          <a href="trivia.html">Trivia</a>
+        </div>
+      </div>
+
       <div class="dropdown">
         <a>More</a>
         <div class="dropdown-content">
@@ -24,6 +32,10 @@
         </div>
       </div>
     </nav>
+    
+    <div id="welcome">
+      <p class="marginTopSmall">Account</p>
+    </div>
 
     <div class="row" id="accountForm">
       <div class="column" style="text-align: center; border-right: 4px solid #4e342e; padding-bottom: 25px;">
