--- a/care.html
+++ b/care.html
@@ -7,12 +7,21 @@
   </head>
   <body>
     <h1 id="title">WhiskerWeb</h1>
+    <a href="account.html" class="accountButton">Account</a>
 
     <nav class="navigationBar">
       <a href="home.html">Home</a>
       <a href="facts.html">Facts</a>
       <img id="logo" src="Images/logo.png" alt="logo">
-      <a href="game.html">Game</a>
+      <div class="dropdown">
+        <a>Games</a>
+        <div class="dropdown-content">
+          <a href="game.html">Guess the Breed</a>
+          <a href="maze.html">Maze</a>
+          <a href="trivia.html">Trivia</a>
+        </div>
+      </div>
+
       <div class="dropdown">
         <a>More</a>
         <div class="dropdown-content">
