--- a/game.html
+++ b/game.html
@@ -8,22 +8,36 @@
   </head>
   <body>
     <h1 id="title">WhiskerWeb</h1>
+    <a href="account.html" class="accountButton">Account</a>
     
     <nav class="navigationBar">
-      <a href="home.html">Home</a>
-      <a href="facts.html">Facts</a>
-      <img id="logo" src="Images/logo.png" alt="logo">
-      <a href="game.html">Game</a>
-      <div class="dropdown">
-        <a>More</a>
-        <div class="dropdown-content">
-          <a href="care.html">Care/Health Tips</a>
-          <a href="blog.html">Blog</a>
-          <a href="catsVsDogs.html">Cats vs Dogs</a>
-          <a href="about.html">About</a>
+      <nav class="navigationBar">
+        <a href="home.html">Home</a>
+        <a href="facts.html">Facts</a>
+        <img id="logo" src="Images/logo.png" alt="logo">
+        <div class="dropdown">
+          <a>Games</a>
+          <div class="dropdown-content">
+            <a href="game.html">Guess the Breed</a>
+            <a href="maze.html">Maze</a>
+            <a href="trivia.html">Trivia</a>
+          </div>
         </div>
-      </div>
-    </nav>
+  
+        <div class="dropdown">
+          <a>More</a>
+          <div class="dropdown-content">
+            <a href="care.html">Care/Health Tips</a>
+            <a href="blog.html">Blog</a>
+            <a href="catsVsDogs.html">Cats vs Dogs</a>
+            <a href="about.html">About</a>
+          </div>
+        </div>
+      </nav>
+
+    <div id="welcome">
+      <p class="marginTopSmall">Guess the Breed</p>
+    </div>
 
     <div id="game">
       <div id="message" style="display: none;"></div>
@@ -31,6 +45,9 @@
       <div id="options"></div>
       <button id="next">Next</button>
     </div>
+
+    <p id="currentScore">Streak: 0</p>
+    <p id="highScore">High Score: 0</p>
 
     <div class="backButton" style="margin-top: 50px;">
       <a href="home.html">Back to Home</a>
