--- a/trivia.html
+++ b/trivia.html
@@ -34,23 +34,7 @@
     </nav>
 
     <div id="welcome">
-      <p class="marginTopSmall">About</p>
+      <p class="marginTopSmall">Trivia</p>
     </div>
-    
-    <div style="text-align: center; font-size: larger;">
-      <div>
-        <i>Hi there, my name is Elvin Nguyen and welcome to my website, WhiskerWeb, where you can find all things cats.</i>
-      </div>
-      <div>
-        <i>My brother has two cats at home so that is the inspiration of this website. I hope you like it :).</i>
-      </div>
-      <div>
-        INSERT PICTURE OF CATS
-      </div>
-    </div>
-    <div class="backButton" style="margin-top: 50px;">
-      <a href="home.html">Back to Home</a>
-    </div>
-
   </body>
 </html>
