--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
       <div class="dropdown">
         <a>Games</a>
         <div class="dropdown-content">
-          <a href="game.html">Guess the Breed</a>
+          <a href="guessGame.html">Guess the Breed</a>
           <a href="maze.html">Maze</a>
           <a href="trivia.html">Trivia</a>
         </div>
@@ -28,11 +28,12 @@
           <a href="care.html">Care/Health Tips</a>
           <a href="blog.html">Blog</a>
           <a href="catsVsDogs.html">Cats vs Dogs</a>
+          <a href="adopt.html">Adoption Info</a>
           <a href="about.html">About</a>
+
         </div>
       </div>
     </nav>
-
     <div id="welcome">
       <p class="marginTopSmall">About</p>
     </div>
@@ -44,10 +45,13 @@
       <div>
         <i>My brother has two cats at home so that is the inspiration of this website. I hope you like it :).</i>
       </div>
-      <div>
-        INSERT PICTURE OF CATS
+      <div style="display: flex; justify-content: center;" class="marginTopSmall">
+        <img class="imgSize marginRightSmall" src="Images/migi.png" alt="my cat migi">
+        <img class="imgSize" src="Images/lychee.png" alt="my cat lychee">
       </div>
     </div>
+
+
     <div class="backButton" style="margin-top: 50px;">
       <a href="home.html">Back to Home</a>
     </div>
