--- a/catsVsDogs.html
+++ b/catsVsDogs.html
@@ -17,7 +17,7 @@
       <div class="dropdown">
         <a>Games</a>
         <div class="dropdown-content">
-          <a href="game.html">Guess the Breed</a>
+          <a href="guessGame.html">Guess the Breed</a>
           <a href="maze.html">Maze</a>
           <a href="trivia.html">Trivia</a>
         </div>
@@ -29,7 +29,9 @@
           <a href="care.html">Care/Health Tips</a>
           <a href="blog.html">Blog</a>
           <a href="catsVsDogs.html">Cats vs Dogs</a>
+          <a href="adopt.html">Adoption Info</a>
           <a href="about.html">About</a>
+
         </div>
       </div>
     </nav>
