--- a/facts.html
+++ b/facts.html
@@ -17,7 +17,7 @@
       <div class="dropdown">
         <a>Games</a>
         <div class="dropdown-content">
-          <a href="game.html">Guess the Breed</a>
+          <a href="guessGame.html">Guess the Breed</a>
           <a href="maze.html">Maze</a>
           <a href="trivia.html">Trivia</a>
         </div>
@@ -29,7 +29,9 @@
           <a href="care.html">Care/Health Tips</a>
           <a href="blog.html">Blog</a>
           <a href="catsVsDogs.html">Cats vs Dogs</a>
+          <a href="adopt.html">Adoption Info</a>
           <a href="about.html">About</a>
+
         </div>
       </div>
     </nav>
@@ -50,22 +52,24 @@
       <a class="noMarginTop" href="https://www.factretriever.com/cat-facts" target="_blank">Here's a full list of cat facts!!!</a>
     </div>
 
-    <div id='textBlock' class="flex" class="marginTopSmall">
-      <p class="marginRightSmall">
+    <div class="row">
+      <div class="column">
         <img src="Images/cat3.jpg" class="floatLeft factImg">
-        Cats are cool because they are independent and don't need to be taken out for walks. They are also very clean and don't need to be bathed. They are also very cute and cuddly. They are also very good at catching mice and other pests. They are also very good at keeping you company. They are also very good at being cute. They are also very good at being cats.
-        According to the website above. Some Siamese cats appear cross-eyed because the nerves from the left side of the brain go to mostly the right eye and the nerves from the right side of the brain go mostly to the left eye. This causes some double vision, which the cat tries to correct by “crossing” its eyes.
-        So very interesting right.
-      </p>
-      <p class="marginRightSmall">
+        <p class="marginRightSmall">
+          Cats are cool because they are independent and don't need to be taken out for walks. They are also very clean and don't need to be bathed. They are also very cute and cuddly. They are also very good at catching mice and other pests. They are also very good at keeping you company. They are also very good at being cute. They are also very good at being cats.
+          According to the website above. Some Siamese cats appear cross-eyed because the nerves from the left side of the brain go to mostly the right eye and the nerves from the right side of the brain go mostly to the left eye. This causes some double vision, which the cat tries to correct by “crossing” its eyes.
+          So very interesting right.
+        </p>
+      </div>
+      <div class="column">
         <img src="Images/cat2.jpg" class="floatLeft factImg">
-        Cats are cool because they are independent and don't need to be taken out for walks. They are also very clean and don't need to be bathed. They are also very cute and cuddly. They are also very good at catching mice and other pests. They are also very good at keeping you company. They are also very good at being cute. They are also very good at being cats.
-        According to the website above. Some Siamese cats appear cross-eyed because the nerves from the left side of the brain go to mostly the right eye and the nerves from the right side of the brain go mostly to the left eye. This causes some double vision, which the cat tries to correct by “crossing” its eyes.
-        So very interesting right.
-      </p>
-
+        <p class="marginRightSmall">
+          Cats are cool because they are independent and don't need to be taken out for walks. They are also very clean and don't need to be bathed. They are also very cute and cuddly. They are also very good at catching mice and other pests. They are also very good at keeping you company. They are also very good at being cute. They are also very good at being cats.
+          According to the website above. Some Siamese cats appear cross-eyed because the nerves from the left side of the brain go to mostly the right eye and the nerves from the right side of the brain go mostly to the left eye. This causes some double vision, which the cat tries to correct by “crossing” its eyes.
+          So very interesting right.
+        </p>
+      </div>
     </div>
-
     <div>
       <form>
         <p class="noMarginBottom">Do you have any cat facts to share?</p>
