--- a/account.html
+++ b/account.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Register - WhiskerWeb</title>
+    <title>Account - WhiskerWeb</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="Styling/basicStyling.css">
   </head>
@@ -16,7 +16,7 @@
       <div class="dropdown">
         <a>Games</a>
         <div class="dropdown-content">
-          <a href="game.html">Guess the Breed</a>
+          <a href="guessGame.html">Guess the Breed</a>
           <a href="maze.html">Maze</a>
           <a href="trivia.html">Trivia</a>
         </div>
@@ -28,7 +28,9 @@
           <a href="care.html">Care/Health Tips</a>
           <a href="blog.html">Blog</a>
           <a href="catsVsDogs.html">Cats vs Dogs</a>
+          <a href="adopt.html">Adoption Info</a>
           <a href="about.html">About</a>
+
         </div>
       </div>
     </nav>
