--- a/blog.html
+++ b/blog.html
@@ -17,7 +17,7 @@
       <div class="dropdown">
         <a>Games</a>
         <div class="dropdown-content">
-          <a href="game.html">Guess the Breed</a>
+          <a href="guessGame.html">Guess the Breed</a>
           <a href="maze.html">Maze</a>
           <a href="trivia.html">Trivia</a>
         </div>
@@ -29,7 +29,9 @@
           <a href="care.html">Care/Health Tips</a>
           <a href="blog.html">Blog</a>
           <a href="catsVsDogs.html">Cats vs Dogs</a>
+          <a href="adopt.html">Adoption Info</a>
           <a href="about.html">About</a>
+
         </div>
       </div>
     </nav>
@@ -40,7 +42,7 @@
 
     <div class="flex blogGrid">
       <div class="blogPost marginRightSmall flex">
-        <h3 class="blogTitle">Cat gets stuck in tree. You won't believe what happens next. It will shock you. 2/13/2024</h3>
+        <h3 class="blogTitle">Cat gets stuck in tree. You won't believe what happens next. It will shock you. 4/20/2024</h3>
         <img class="imgSize" src="Images/treecat.jpg" alt="cat in tree">
         <p>
           In an unexpected twist, a cat's daring climb up a tree ended with it stranded, calling for help.
