--- a/trivia.html
+++ b/trivia.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>About - WhiskerWeb</title>
+    <title>Trivia - WhiskerWeb</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="Styling/basicStyling.css">
+    <link rel="stylesheet" type="text/css" href="Styling/game.css">
   </head>
   <body>
     <h1 id="title">WhiskerWeb</h1>
@@ -16,7 +17,7 @@
       <div class="dropdown">
         <a>Games</a>
         <div class="dropdown-content">
-          <a href="game.html">Guess the Breed</a>
+          <a href="guessGame.html">Guess the Breed</a>
           <a href="maze.html">Maze</a>
           <a href="trivia.html">Trivia</a>
         </div>
@@ -28,7 +29,9 @@
           <a href="care.html">Care/Health Tips</a>
           <a href="blog.html">Blog</a>
           <a href="catsVsDogs.html">Cats vs Dogs</a>
+          <a href="adopt.html">Adoption Info</a>
           <a href="about.html">About</a>
+
         </div>
       </div>
     </nav>
@@ -36,5 +39,13 @@
     <div id="welcome">
       <p class="marginTopSmall">Trivia</p>
     </div>
+
+    <div id="questionDisplay"></div>
+    <div id="options"></div>
+
+    <div class="backButton" style="margin-top: 50px;">
+      <a href="home.html">Back to Home</a>
+    </div>
+    <script src="Scripts/trivia.js"></script>
   </body>
 </html>
