--- a/adopt.html
+++ b/adopt.html
@@ -22,7 +22,6 @@
           <a href="trivia.html">Trivia</a>
         </div>
       </div>
-
       <div class="dropdown">
         <a>More</a>
         <div class="dropdown-content">
@@ -31,7 +30,6 @@
           <a href="catsVsDogs.html">Cats vs Dogs</a>
           <a href="adopt.html">Adoption Info</a>
           <a href="about.html">About</a>
-
         </div>
       </div>
     </nav>
@@ -114,5 +112,8 @@
       </div>
     </div>
 
+    <div class="backButton" style="margin-top: 20px;">
+      <a href="home.html">Back to Home</a>
+    </div>
   </body>
 </html>
