--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
     <title>Home - WhiskerWeb</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="Styling/basicStyling.css">
+    <link rel="stylesheet" type="text/css" href="Styling/account.css">
   </head>
   <body>
     <h1 id="title">WhiskerWeb</h1>
@@ -21,7 +22,6 @@
           <a href="trivia.html">Trivia</a>
         </div>
       </div>
-
       <div class="dropdown">
         <a>More</a>
         <div class="dropdown-content">
@@ -30,41 +30,38 @@
           <a href="catsVsDogs.html">Cats vs Dogs</a>
           <a href="adopt.html">Adoption Info</a>
           <a href="about.html">About</a>
-
         </div>
       </div>
     </nav>
 
-    <div id="welcome">
-      <p class="noMarginVert">Welcome to WhiskerWeb!</p>
-    </div>
+    <h1 class="noMarginVert">Welcome to WhiskerWeb!</h1>
     
     <section>
       <p class="noMarginTop">We're all about cats! Discover fascinating facts, play fun games, read our blog, and more.</p>
-      <img src="Images/cat1.jpg" alt="A picture of a cat." class="imgSize">
     </section>
 
     <section id="content">
       <h1 class="marginTopSmall">Featured Content</h1>
       <div>
-        <h2 class="marginBottomSmall">Check out our latest blog post!</h2>
+        <h2 class="marginBottomSmall noMarginTop">Check out our latest blog post!</h2>
         <a href="blog.html">
           <img class="imgSize" src="Images/treecat.jpg" alt="cat in tree">
         </a>
       </div>
 
       <div>
-        <h2 class="marginBottomSmall">Can you guess the breed?</h2>
+        <h2 class="marginBottomSmall marginTopSmall">Can you guess the breed?</h2>
         <a href="guessGame.html">
-          <img class="imgSize" src="Images/Breeds/Siamese/1.jpg" alt="siamese cat">
+          <img class="imgSize" src="Images/Breeds/Bengal/1.jpg" alt="siamese cat">
         </a>
       </div>
     </section>
 
     <section id="content">
       <h2 class="marginBottomSmall">Get Started</h2>
-      <p><a href="account.html" style="text-decoration: none; font-size: 120%;">Create an Account</a></p>
+      <a href="account.html" style="text-decoration: none; font-size: 120%;">
+        <button style="width: 40%;">Create an Account</button>
+      </a>
     </section>
-
   </body>
 </html>
